--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,14 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "strstream": "cpp",
+        "*.tcc": "cpp",
+        "csignal": "cpp",
+        "cwctype": "cpp",
+        "memory_resource": "cpp",
+        "string_view": "cpp",
+        "shared_mutex": "cpp",
+        "cinttypes": "cpp"
     }
 }
