Second Order - OpenMp  : Grupo H

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,13 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Define OpenMP
+find_package(OpenMP REQUIRED)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 # Define sources
 file(GLOB_RECURSE SOURCES_FILES
     "classification/*.cpp"
@@ -25,8 +32,8 @@ file(GLOB_RECURSE FEATURE_EXTRACTION_SOURCES_FILES
 
 # Define headers
 file(GLOB_RECURSE HEADERS_FILES
-    "*.h"
-    "*.hpp"
+"*.h"
+"*.hpp"
 )
 
 # Set sources
@@ -35,11 +42,13 @@ add_library(classificationMetrics STATIC "${METRICS_SOURCES_FILES}")
 add_library(featureExtraction STATIC "${FEATURE_EXTRACTION_SOURCES_FILES}")
 
 
+
+
 # Include dirs
 include_directories(classification)
 include_directories(metrics)
 include_directories(feature_ext_sel)
-
+include_directories(${OpenMP_CXX_LIBRARIES})
 
 # C++ flags
 set(USE_PTHREAD ON)
