--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,14 @@ file(GLOB_RECURSE FEATURE_EXTRACTION_SOURCES_FILES
     "feature_ext_sel/*.cxx"
 )
 
+file(GLOB_RECURSE GLCM_SOURCES_FILES
+    "feature_ext_sel/SecondOrder/GLCM/*.cpp"
+    "feature_ext_sel/SecondOrder/GLCM/*.cxx"
+    "feature_ext_sel/SecondOrder/GLCM_P/*.cpp"
+    "feature_ext_sel/SecondOrder/GLCM_P/*.cxx"
+
+)
+
 # Define headers
 file(GLOB_RECURSE HEADERS_FILES
 "*.h"
@@ -40,7 +48,7 @@ file(GLOB_RECURSE HEADERS_FILES
 add_library(classification STATIC "${SOURCES_FILES}")
 add_library(classificationMetrics STATIC "${METRICS_SOURCES_FILES}")
 add_library(featureExtraction STATIC "${FEATURE_EXTRACTION_SOURCES_FILES}")
-
+add_library(GLCM STATIC "${GLCM_SOURCES_FILES}")
 
 
 
@@ -48,6 +56,7 @@ add_library(featureExtraction STATIC "${FEATURE_EXTRACTION_SOURCES_FILES}")
 include_directories(classification)
 include_directories(metrics)
 include_directories(feature_ext_sel)
+include_directories(GLCM)
 include_directories(${OpenMP_CXX_LIBRARIES})
 
 # C++ flags
